--- a/TP4_RodriguezMariano/src/main/resources/templates/resultado.html
+++ b/TP4_RodriguezMariano/src/main/resources/templates/resultado.html
@@ -21,32 +21,30 @@
 			<br>
 			<h2 class="text-center">Listado de productos</h2>
 			<br>
-			<div class="table-responsive text-dark d-flex justify-content-center text-center">
-				<table class="table-info table-bordered">
-					<tr>
-						<th>Cod producto</th>
-						<th>Nombre</th>
-						<th>Precio</th>
-						<th>Marca</th>
-						<th>Stock</th>
-						<th>Editar</th>
-						<th>Eliminar</th>
-					</tr>
-					<tr th:if="${productos.empty}">
-						<td class="text-center" colspan="7">No hay productos cargados</td>
-					</tr>
-					<tr th:each="producto : ${productos}">
-						<td th:text="${producto.codigo}"></td>
-						<td th:text="${producto.nombre}"></td>
-						<td th:text="${producto.precio}"></td>
-						<td th:text="${producto.marca}"></td>
-						<td th:text="${producto.stock}"></td>
-						<td><a th:href="@{'/producto/editar/'+${producto.codigo}}"><i class="fa fa-edit"></i></a></td>
-						<td><a th:href="@{'/producto/eliminar/'+${producto.codigo}}"><i
-									class="fas fa-trash-alt"></i></a></td>
-					</tr>
-				</table>
+	<div class="row d-flex justify-content-center">
+				<div th:each="producto : ${productos}" class="col-md-4">
+					<div class="card mb-5" style="width: 100%;">
+						<div class="card-header">
+							<img th:src="@{/img/producto.png}" alt="" class="container-fluid">
+						</div>
+						<div class="card-body">
+							<p>Codigo: <span th:text="${producto.codigo}"></span></p>
+							<p>Nombre: <span th:text="${producto.nombre}"></span></p>
+							<p>Precio: <span th:text="${producto.precio}"></span></p>
+							<p>Marca: <span th:text="${producto.marca}"></span></p>
+							<p>Stock: <span th:text="${producto.stock}"></span></p>
+							<p><a th:href="@{'/producto/editar/'+${producto.codigo}}"><i class="fa fa-edit"></i></a> <a th:href="@{'/producto/eliminar/'+${producto.codigo}}"><i
+									class="fas fa-trash-alt"></i></a></p>
+						<p></p>
+							<div class="text-center">
+								<a href="#" class="btn btn-success text-light">Comprar</a>
+							</div>
+						</div>
+					</div>
+
+				</div>
 			</div>
+
 			<br>
 			<button class="boton">
 						<a th:href="@{/ultimo-producto}">Mostrar ultimo producto</a>
