Agregado de funciones de Venta
Agregado de Ventas, resta de stock de producto, estilos y ventana modal

--- a/TP4_RodriguezMariano/src/main/resources/templates/layouts/formulario-cliente.html
+++ b/TP4_RodriguezMariano/src/main/resources/templates/layouts/formulario-cliente.html
@@ -66,7 +66,7 @@
             </div>
             <br>
             <div class="form-group d-flex boton">
-                <button type="submit" class="btn btn-sucess mr-2">Agregar</button>
+                <button type="submit" class="btn btn-success text-light">Agregar</button>
             </div>
         </form>
     </div>
