--- a/TP4_RodriguezMariano/src/main/resources/templates/resultado.html
+++ b/TP4_RodriguezMariano/src/main/resources/templates/resultado.html
@@ -21,7 +21,7 @@
 			<br>
 			<h2 class="text-center">Listado de productos</h2>
 			<br>
-	<div class="row d-flex justify-content-center">
+			<div class="row d-flex justify-content-center">
 				<div th:each="producto : ${productos}" class="col-md-4">
 					<div class="card mb-5" style="width: 100%;">
 						<div class="card-header">
@@ -33,11 +33,12 @@
 							<p>Precio: <span th:text="${producto.precio}"></span></p>
 							<p>Marca: <span th:text="${producto.marca}"></span></p>
 							<p>Stock: <span th:text="${producto.stock}"></span></p>
-							<p><a th:href="@{'/producto/editar/'+${producto.codigo}}"><i class="fa fa-edit"></i></a> <a th:href="@{'/producto/eliminar/'+${producto.codigo}}"><i
-									class="fas fa-trash-alt"></i></a></p>
-						<p></p>
+							<p><a th:href="@{'/producto/eliminar/'+${producto.codigo}}"><i
+										class="fas fa-trash-alt"></i></a></p>
+							<p></p>
 							<div class="text-center">
-								<a href="#" class="btn btn-success text-light">Comprar</a>
+								<a th:href="@{'/producto/vender/'+${producto.codigo}}"
+									class="btn btn-success text-light link-vender">Comprar</a>
 							</div>
 						</div>
 					</div>
@@ -47,11 +48,11 @@
 
 			<br>
 			<button class="boton">
-						<a th:href="@{/ultimo-producto}">Mostrar ultimo producto</a>
-					</button>
+				<a th:href="@{/ultimo-producto}">Mostrar ultimo producto</a>
+			</button>
 			<br>
-				<button class="boton">
-			<a  th:href="@{/volver}">Volver a cargar un producto</a>
+			<button class="boton">
+				<a th:href="@{/volver}">Volver a cargar un producto</a>
 			</button>
 		</div>
 		<div th:insert="layouts/footer :: footer"></div>
@@ -60,12 +61,33 @@
 
 
 
+	<!--Modal Editar-->
+	<div class="modal fade" id="modalVender" tabindex="-1" role="dialog">
+		<div class="modal-dialog modal-dialog-centered">
+			<div class="modal-content">
+
+			</div>
+		</div>
+	</div>
+
+
+	<!--Scripts-->
+
 	<script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}" type="text/javascript"
 		src="webjars/jquery/3.5.1/jquery.min.js"></script>
 	<script th:src="@{/webjars/popper.js/1.16.0/popper.min.js}" type="text/javascript"
 		src="webjars/popper.js/1.16.0/popper.min.js"></script>
 	<script th:src="@{/webjars/bootstrap/4.5.0/js/bootstrap.min.js}" type="text/javascript"
 		src="webjars/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function () {
+			$(".link-vender").on("click", function (event) {
+				event.preventDefault();
+				$("#modalVender").modal("show").find(".modal-content").load($(this).attr("href"));
+			});
+		});
+	</script>
+
 </body>
 
 </html>
