--- a/TP4_RodriguezMariano/src/main/resources/templates/layouts/header.html
+++ b/TP4_RodriguezMariano/src/main/resources/templates/layouts/header.html
@@ -24,7 +24,7 @@
 					<a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Productos</a>
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <li><a class="dropdown-item" href="/producto">Producto Administrador</a></li>
-          <li><a class="dropdown-item" href="/producto/mostrar">Venta</a></li>
+          <li><a class="dropdown-item" href="/producto/ventas">Venta</a></li>
         </ul>
 					</li>
                 <li class="nav-item">
